<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:textColor="@android:color/primary_text_light"
        android:layout_centerHorizontal="true"
        android:text="@string/about_title"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_about_photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        tools:src="@android:color/darker_gray" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:textSize="25dp"
        android:textColor="@android:color/primary_text_light"
        android:layout_centerHorizontal="true"
        android:text="@string/Author"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:textSize="20dp"
        android:textColor="@android:color/primary_text_light"
        android:layout_centerHorizontal="true"
        android:text="@string/Author_email"/>
</RelativeLayout>